# sudokuist

./: .env.production  .gitignore  .gziprc  Cargo.toml  PRODUCTION_BUILD.md  README.md  SHAREABLE_FEATURE.md  build-optimized.sh  build-prod.sh  compare-builds.sh  dev-setup.sh  index.html  package-lock.json  package.json  serve.json  serve.production.json  server.py  tsconfig.json  vite.config.js
.github/: BADGES.md
.github/workflows/: build-test.yml  deploy-pages.yml
public/: sudoku_wasm.js  sudoku_wasm_bg.wasm
src/: app.ts  database.ts  difficulty.rs  difficulty_backup.rs  game-manager.ts  generator.rs  grid.rs  lib.rs  lib_backup.rs  modal.ts  solver.rs  types.rs  types.ts  utils.ts  validator.rs  wasm-loader.ts  wasm.d.ts  wasm_exports.rs
styles/: README.md  animations.css  base.css  main.css  reset.css  responsive.css  styles.css  variables.css
styles/components/: difficulty-selection.css  game-board.css  mobile-numpad.css  modal.css  numpad.css  scoreboard.css  share.css  start-screen.css  timer.css
tests/: integration_tests.rs
